objects/Account/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Salesperson__c.Account_Executive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Accounts (Account Executive)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>