objects/Account/fields/Account_Executive_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Code__c</fullName>
    <formula>Account_Executive__r.Salesperson_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive Code</label>
    <type>Text</type>
</CustomField>