objects/Account/fields/Account_Executive_ids__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_ids__c</fullName>
    <description>To store Account Executive id's to create a hyper link</description>
    <label>Account Executive ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>