objects/Account/fields/Account_Executives__c.field-meta.xml
<CustomField>
    <fullName>Account_Executives__c</fullName>
    <description>To show selected Account executives as a hyper link</description>
    <label>Additional Account Executives</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>