objects/Account/fields/Account_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier__c</fullName>
    <displayFormat>ACCT-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Account Identifier</label>
    <type>AutoNumber</type>
</CustomField>