objects/Account/fields/Account_Identifier_Synced__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifier_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Identifier Synced</label>
    <type>Checkbox</type>
</CustomField>