objects/Account/fields/AccountOwnermatchAE__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnermatchAE__c</fullName>
    <formula>Owner.Id = Account_Executive__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOwnermatchAE</label>
    <type>Checkbox</type>
</CustomField>