objects/Account/fields/AE_ID__c.field-meta.xml
<CustomField>
    <fullName>AE_ID__c</fullName>
    <formula>Account_Executive__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AE ID</label>
    <type>Text</type>
</CustomField>