objects/Account/fields/AE_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>AE_LastActivityDate__c</fullName>
    <description>Roll up of Last activity date by profile</description>
    <label>AE_LastActivityDate</label>
    <type>Date</type>
</CustomField>