objects/Account/fields/Alternate_Billing__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Billing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts_Alt_Billing</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>