objects/Account/fields/API_Call__c.field-meta.xml
<CustomField>
    <fullName>API_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Call</label>
    <type>Checkbox</type>
</CustomField>