objects/Account/fields/Auto_Create_Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Catalog_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Catalog Item</label>
    <type>Checkbox</type>
</CustomField>