objects/Account/fields/Available_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit_Limit__c</fullName>
    <formula>IF(ISNULL(Credit_Limit_LCY__c) , 0, Credit_Limit_LCY__c) - IF(ISNULL(Balance_Due_LCY__c), 0, Balance_Due_LCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>