objects/Account/fields/Average_Pay_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Pay_Day__c</fullName>
    <label>Average Pay Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>