objects/Account/fields/AvlCredit_wConfrimedScheduledTM__c.field-meta.xml
<CustomField>
    <fullName>AvlCredit_wConfrimedScheduledTM__c</fullName>
    <description>Available Credit plus value of unbilledT&amp;M</description>
    <formula>Available_Credit_Limit__c   -  ScheduledConfirmedTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Available Credit plus value of unbilled T&amp;M</inlineHelpText>
    <label>AvlCredit_wUnbilledT&amp;M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>