objects/Account/fields/AvlCreditFormula__c.field-meta.xml
<CustomField>
    <fullName>AvlCreditFormula__c</fullName>
    <formula>Available_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AvlCreditFormula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>