objects/Account/fields/Balance_Due_LCY_120_Days__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_LCY_120_Days__c</fullName>
    <label>Balance Due (120 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>