objects/Account/fields/Balance_Due_LCY__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_LCY__c</fullName>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>