objects/Account/fields/Balance_Due_LCY_Current__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_LCY_Current__c</fullName>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>