objects/Account/fields/Budget_Last_Three_Months__c.field-meta.xml
<CustomField>
    <fullName>Budget_Last_Three_Months__c</fullName>
    <label>Budget (Last 3 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>