objects/Account/fields/Budget_November_2022__c.field-meta.xml
<CustomField>
    <fullName>Budget_November_2022__c</fullName>
    <label>Budget November 2022</label>
    <summarizedField>Sales_Budget__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Budget__c.Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Budget__c.Period_No__c</field>
        <operation>equals</operation>
        <value>11</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Budget__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>