objects/Account/fields/Budget_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_This_Month__c</fullName>
    <label>Budget (This Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>