objects/Account/fields/Budget_Two_Months_Ago__c.field-meta.xml
<CustomField>
    <fullName>Budget_Two_Months_Ago__c</fullName>
    <label>Budget (2 Months Prior)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>