objects/Account/fields/Budget_YTD__c.field-meta.xml
<CustomField>
    <fullName>Budget_YTD__c</fullName>
    <label>Budget (YTD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>