objects/Account/fields/Business_Development_Director__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Director__c</fullName>
    <formula>TEXT(Owner.BDD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner BDD</label>
    <type>Text</type>
</CustomField>