objects/Account/fields/Certified_States__c.field-meta.xml
<CustomField>
    <fullName>Certified_States__c</fullName>
    <label>Certified States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>