objects/Account/fields/Check_Account__c.field-meta.xml
<CustomField>
    <fullName>Check_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Account</label>
    <type>Checkbox</type>
</CustomField>