objects/Account/fields/Contact_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Filter__c</fullName>
    <label>Contact Type Filter</label>
    <length>250</length>
    <type>Text</type>
</CustomField>