objects/Account/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <label>Converted Date</label>
    <type>DateTime</type>
</CustomField>