objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>