objects/Account/fields/Credit_Limit_LCY__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_LCY__c</fullName>
    <label>Credit Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>