objects/Account/fields/Current_Purchase_Balance_LCY__c.field-meta.xml
<CustomField>
    <fullName>Current_Purchase_Balance_LCY__c</fullName>
    <label>Current Purchase Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>