objects/Account/fields/Customer_Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Billing_Instructions__c</fullName>
    <label>Customer Billing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>