objects/Account/fields/Customer_Category2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category2__c</fullName>
    <description>Shows the NAICS code from D365</description>
    <label>Customer Category2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>