objects/Account/fields/Customer_Specific_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_Documentation__c</fullName>
    <label>Customer Specific Documentation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>