objects/Account/fields/D365_Customer_Classification_Group__c.field-meta.xml
<CustomField>
    <fullName>D365_Customer_Classification_Group__c</fullName>
    <label>D365 Customer Classification Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>