objects/Account/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>