objects/Account/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <formula>Sales_LCY_Last_Year__c  -  Sales_LCY_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>