objects/Account/fields/Disabled_New_Cust_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Disabled_New_Cust_Email_Notification__c</fullName>
    <formula>Subsidiary_Company__r.Disable_Prospect_Conversion_Email__c</formula>
    <label>Disabled New Cust Email Notification</label>
    <type>Checkbox</type>
</CustomField>