objects/Account/fields/Dup_Account__c.field-meta.xml
<CustomField>
    <fullName>Dup_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dup Account</label>
    <type>Checkbox</type>
</CustomField>