objects/Account/fields/Ecoflo_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Ecoflo_Account_Manager__c</fullName>
    <label>Ecoflo Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>