objects/Account/fields/Ecoflo_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Ecoflo_Account_Number__c</fullName>
    <label>Ecoflo Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>