objects/Account/fields/Emergency__c.field-meta.xml
<CustomField>
    <fullName>Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency?</label>
    <type>Checkbox</type>
</CustomField>