objects/Account/fields/EQAI_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Customer_ID__c</fullName>
    <label>EQAI Customer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>