objects/Account/fields/ER_Contract__c.field-meta.xml
<CustomField>
    <fullName>ER_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does account have standby ER agreement on file</inlineHelpText>
    <label>ER Contract</label>
    <type>Checkbox</type>
</CustomField>