objects/Account/fields/ER_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Contract_Date__c</fullName>
    <label>ER Contract Date</label>
    <type>Date</type>
</CustomField>