objects/Account/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <inlineHelpText>Estimated amount to establish the credit amount when setting up a new customer.</inlineHelpText>
    <label>Estimated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>