objects/Account/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>45</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>