objects/Account/fields/Federal_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID_No__c</fullName>
    <label>Federal ID No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>