objects/Account/fields/History_Average_Overdue_Day__c.field-meta.xml
<CustomField>
    <fullName>History_Average_Overdue_Day__c</fullName>
    <label>History Average Overdue Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>