objects/Account/fields/History_No_of_Invoices__c.field-meta.xml
<CustomField>
    <fullName>History_No_of_Invoices__c</fullName>
    <label>History No. of Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>