objects/Account/fields/Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Home_Page__c</fullName>
    <label>Home Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>