objects/Account/fields/In_Sync__c.field-meta.xml
<CustomField>
    <fullName>In_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Sync</label>
    <type>Checkbox</type>
</CustomField>