objects/Account/fields/Inter_co_Account__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accounts are not tax liable.</inlineHelpText>
    <label>Intra-Co</label>
    <type>Checkbox</type>
</CustomField>