objects/Account/fields/Inter_co_AR_Account__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/R GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>