objects/Account/fields/Inter_co_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Inter_co_Revenue_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>Accounts (Inter-co Revenue Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>