objects/Account/fields/InterCo__c.field-meta.xml
<CustomField>
    <fullName>InterCo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Republic Customer Accounts</inlineHelpText>
    <label>Inter-Co</label>
    <type>Checkbox</type>
</CustomField>