objects/Account/fields/Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Intercompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Ecology Internal Account</label>
    <type>Checkbox</type>
</CustomField>