objects/Account/fields/Invoice_Backup_Documents__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Backup_Documents__c</fullName>
    <label>Invoice Backup Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVOICE</fullName>
                <label>Invoice</label>
            </value>
            <value>
                <fullName>MANIFEST_WEIGHT_TICKET</fullName>
                <label>Disposal Manifest/Weight Ticket</label>
            </value>
            <value>
                <fullName>TM</fullName>
                <label>T&amp;M</label>
            </value>
            <value>
                <fullName>CERTIFIED_PAYROLL</fullName>
                <label>Certified Payroll</label>
            </value>
            <value>
                <fullName>SPILL_REPORT_WITH_PICTURES</fullName>
                <label>Spill Report w/ Pictures</label>
            </value>
            <value>
                <fullName>MARK_UP_VENDOR_INVOICE_OR_RECEIPT</fullName>
                <label>Mark-Up Vendor Invoice/Receipt</label>
            </value>
            <value>
                <fullName>CUSTOMER_SPECIFIC_DOCUMENTATION</fullName>
                <label>Customer Specific Documentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>