objects/Account/fields/Invoice_Email_Contact_Types__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Contact_Types__c</fullName>
    <label>Invoice Email Contact Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BILLING</fullName>
                <label>Billing</label>
            </value>
            <value>
                <fullName>SITE</fullName>
                <label>Site</label>
            </value>
            <value>
                <fullName>EXECUTIVE</fullName>
                <label>Executive</label>
            </value>
            <value>
                <fullName>SALES</fullName>
                <label>Sales</label>
            </value>
            <value>
                <fullName>QUOTE</fullName>
                <label>Quote</label>
            </value>
            <value>
                <fullName>PURCHASE</fullName>
                <label>Purchase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>