objects/Account/fields/Invoice_Portal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Portal__c</fullName>
    <label>Invoice Portal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>