objects/Account/fields/Invoice_Submission_Channels__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submission_Channels__c</fullName>
    <label>Invoice Submission Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>INVOICE_PORTAL</fullName>
                <label>Invoice Portal</label>
            </value>
            <value>
                <fullName>HARD_COPY_SUBMITTAL</fullName>
                <label>Hard Copy Submittal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>