objects/Account/fields/Last__c.field-meta.xml
<CustomField>
    <fullName>Last__c</fullName>
    <label>Last 18 Month Rev</label>
    <summarizedField>Customer_Revenue__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Period_Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/1/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Revenue__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>