objects/Account/fields/Last_Activity_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_By_Role__c</fullName>
    <label>Last Activity By Role</label>
    <type>DateTime</type>
</CustomField>