objects/Account/fields/Last_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Sales__c</fullName>
    <label>Last Month Sales ($)</label>
    <summarizedField>Customer_Revenue__c.Sales_LCY__c</summarizedField>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Period__c</field>
        <operation>equals</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Customer_Revenue__c.Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Revenue__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>