objects/Account/fields/Last_Rollup_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rollup_Date__c</fullName>
    <label>Last Rollup Date</label>
    <type>DateTime</type>
</CustomField>