objects/Account/fields/MBE__c.field-meta.xml
<CustomField>
    <fullName>MBE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Minority Owned</inlineHelpText>
    <label>MBE</label>
    <type>Checkbox</type>
</CustomField>