objects/Account/fields/MBE_WBE_Reporting_Required__c.field-meta.xml
<CustomField>
    <fullName>MBE_WBE_Reporting_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MBE/WBE Reporting Required</label>
    <type>Checkbox</type>
</CustomField>