objects/Account/fields/MSG__c.field-meta.xml
<CustomField>
    <fullName>MSG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the value of MSG field in Customer table in EQAI</description>
    <label>MSG</label>
    <type>Checkbox</type>
</CustomField>