objects/Account/fields/MsgRetailNational__c.field-meta.xml
<CustomField>
    <fullName>MsgRetailNational__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MsgRetailNational</label>
    <type>Checkbox</type>
</CustomField>