objects/Account/fields/Multiple_SC__c.field-meta.xml
<CustomField>
    <fullName>Multiple_SC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple SC</label>
    <type>Checkbox</type>
</CustomField>