objects/Account/fields/NAICS_code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_code__c</fullName>
    <description>Shows the NAICS code from D365</description>
    <label>NAICS code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>