objects/Account/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the National Account field in customer table</description>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>