objects/Account/fields/NAV_ID__c.field-meta.xml
<CustomField>
    <fullName>NAV_ID__c</fullName>
    <externalId>true</externalId>
    <label>NAV ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>