objects/Account/fields/New_Customer_2018__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_2018__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer - 2018</label>
    <type>Checkbox</type>
</CustomField>