objects/Account/fields/New_Customer_2019__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer 2019</label>
    <type>Checkbox</type>
</CustomField>