objects/Account/fields/New_Customer_2022__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_2022__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer 2022</label>
    <type>Checkbox</type>
</CustomField>