objects/Account/fields/New_Customer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Email Sent</label>
    <type>Checkbox</type>
</CustomField>