objects/Account/fields/Onsite_Services_Account__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Services_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite Services Account</label>
    <type>Checkbox</type>
</CustomField>