objects/Account/fields/Open_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity_Count__c</fullName>
    <label>Open Opportunity Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Opportunity Qualified, Proposal/Quote Creation Begun, Proposal/Quote Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>