objects/Account/fields/Opportunity_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Forecast__c</fullName>
    <description>Service Center 21</description>
    <label>Opportunity Forecast SC21</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Service_Center__c</field>
        <operation>equals</operation>
        <value>a06f4000004pA0b</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>